crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__operator_precedence_keywords__precedence_mul_over_add.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/operator_precedence_keywords.rs
expression: "program.items[0]"
---
Statement:
  Expr:
    expr:
      Binary:
        op: Add
        left:
          Literal:
            - Number: 1
            - start: 0
              end: 1
              file: "<input>"
        right:
          Binary:
            op: Mul
            left:
              Literal:
                - Number: 2
                - start: 4
                  end: 5
                  file: "<input>"
            right:
              Literal:
                - Number: 3
                - start: 8
                  end: 9
                  file: "<input>"
            span:
              start: 4
              end: 9
              file: "<input>"
        span:
          start: 0
          end: 9
          file: "<input>"
    span:
      start: 0
      end: 10
      file: "<input>"
