crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__operator_precedence_keywords__precedence_parens_override_div.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/operator_precedence_keywords.rs
expression: "program.items[0]"
---
Statement:
  Expr:
    expr:
      Binary:
        op: Div
        left:
          Group:
            expr:
              Binary:
                op: Sub
                left:
                  Literal:
                    - Number: 10
                    - start: 1
                      end: 3
                      file: "<input>"
                right:
                  Literal:
                    - Number: 2
                    - start: 6
                      end: 7
                      file: "<input>"
                span:
                  start: 1
                  end: 7
                  file: "<input>"
            span:
              start: 0
              end: 8
              file: "<input>"
        right:
          Literal:
            - Number: 4
            - start: 11
              end: 12
              file: "<input>"
        span:
          start: 0
          end: 12
          file: "<input>"
    span:
      start: 0
      end: 13
      file: "<input>"
