crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__operator_precedence_keywords__precedence_unary_minus_before_mul.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/operator_precedence_keywords.rs
expression: "program.items[0]"
---
Statement:
  Expr:
    expr:
      Binary:
        op: Mul
        left:
          Unary:
            op: Negate
            expr:
              Literal:
                - Number: 2
                - start: 1
                  end: 2
                  file: "<input>"
            span:
              start: 0
              end: 2
              file: "<input>"
        right:
          Literal:
            - Number: 3
            - start: 5
              end: 6
              file: "<input>"
        span:
          start: 0
          end: 6
          file: "<input>"
    span:
      start: 0
      end: 7
      file: "<input>"
