crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__operator_precedence_keywords__precedence_unary_not_before_and.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/operator_precedence_keywords.rs
expression: "program.items[0]"
---
Statement:
  Expr:
    expr:
      Binary:
        op: And
        left:
          Unary:
            op: Not
            expr:
              Literal:
                - Bool: false
                - start: 1
                  end: 6
                  file: "<input>"
            span:
              start: 0
              end: 6
              file: "<input>"
        right:
          Literal:
            - Bool: true
            - start: 10
              end: 14
              file: "<input>"
        span:
          start: 0
          end: 14
          file: "<input>"
    span:
      start: 0
      end: 15
      file: "<input>"
